202168044 송준오 웹응용 studymate 웹사이트

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
-# DB 접속 정보만 제외
-/lib/db.php
+# DB 설정 (보안)
+lib/db.php
 
-# 업로드 파일은 제외
-/uploads/
+# 업로드 파일
+uploads/
 
-# 환경 파일
+# 환경 변수
 .env
 
-# 로그
+# 로그 파일
 *.log
+
+# OS / IDE
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
